test/errors/return_too_big.luv
# RET: 1
# RUN: {self} --main-rc
# ERR: {self}:6:12:    return 32768i32
# ERR: {ssss}                 ^ error: Overflow converting constant to i16.
def i16 func16():
    return 32768i32

def i16 main():
    return func16()
